--- a/Módulo 03/desafios/d012/estilo/style.css
+++ b/Módulo 03/desafios/d012/estilo/style.css
@@ -1,11 +1,22 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkcyan;
 }
@@ -17,8 +28,10 @@ header {
 }
 
 header > h1 {
+    font-family: var(--fonte2);
     padding-top: 50px; 
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,6 +53,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px; 
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal {
     background-color: white;
@@ -53,7 +68,8 @@ section.imagem {
 
 section.imagem > p {
     background: rgba(0, 0, 0, 0.449);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 footer {
     background-color: black;
