--- a/Módulo 03/desafios/d012/estilo/style.css
+++ b/Módulo 03/desafios/d012/estilo/style.css
@@ -56,6 +56,10 @@ section {
     font-family: var(--fonte3);
     font-size: 3.5vw;
 }
+
+section > p {
+    padding-bottom: 2em;
+}
 section.normal {
     background-color: white;
     color: black;
@@ -64,13 +68,27 @@ section.normal {
 section.imagem {
     background-color: rgb(62, 44, 44);
     color: white;
+    box-shadow: inside 6px 6px 13pxm 0px rgba(0, 0, 0, 0.474);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background: rgba(0, 0, 0, 0.449);
+    background: rgba(0, 0, 0, 0.514);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+}
+
 footer {
     background-color: black;
     color: white;
